--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,22 +13,22 @@ path = "src/lib.rs"
 
 [dependencies]
 actix-web = { version = "4", features = ["openssl"] }
-actix-rt = "~2.7"
-actix-http = "~3.0"
-log = "~0.4.0"
-env_logger = "~0.9"
-failure = "~0.1"
-serde = "~1.0"
-serde_json = "~1.0"
-async-trait = "~0.1"
-diesel = { version = "~1.4", features = ["postgres", "r2d2", "uuidv07"] }
-diesel_migrations = "~1.4"
-dotenv = "~0.15"
-r2d2 = "~0.8"
-tokio = { version = "~1.18", features = ["full"] }
-thiserror = "~1.0"
-derive_more = "~0.99"
-reqwest={version="0.11", features = ["json"]}
+actix-rt = "2.10"
+actix-http = "3.8"
+log = "0.4.22"
+env_logger = "0.11"
+failure = "0.1"
+serde = "1.0"
+serde_json = "1.0"
+async-trait = "0.1"
+diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
+diesel_migrations = "2.2"
+dotenv = "0.15"
+r2d2 = "0.8"
+tokio = { version = "1.38", features = ["full"] }
+thiserror = "1.0"
+derive_more = "0.99"
+reqwest={version="0.12", features = ["json"]}
 
 # actix-web = "4.0"
 # serde = { version = "1.0", features = ["derive"] }
@@ -36,6 +36,6 @@ reqwest={version="0.11", features = ["json"]}
 # uuid = { version = "1.0", features = ["serde", "v4"] }
 
 [dev-dependencies]
-cargo-tarpaulin = "~0.20"
-uuid = { version = "~1.0", features = ["serde", "v4"] }
-mockall = "~0.11"
+cargo-tarpaulin = "0.30"
+uuid = { version = "1.10", features = ["serde", "v4"] }
+mockall = "0.12"
