--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -1,7 +1,8 @@
 version: '3.8'
 
 services:
-  backend:
+  rustapp:
+    container_name: dev_ayohf_rustapp
     build:
       context: .
       dockerfile: Dockerfile.dev
@@ -11,14 +12,16 @@ services:
       - .:/usr/src/backend
       - /usr/src/backend/target
   nginx:
+    container_name: dev_ayohf_nginx
     image: nginx:latest
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.dev.conf:/etc/nginx/nginx.conf
     depends_on:
-      - backend
+      - rustapp
   db:
+    container_name: dev_ayohf_db
     image: postgres:latest
     environment:
       POSTGRES_USER: ayohf_user
