--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,24 +1,24 @@
 version: '3.8'
 
 services:
-  backend:
-    container_name: dev_ayohf_backend
+  rustapp:
+    container_name: prod_ayohf_rustapp
     build:
       context: .
       dockerfile: Dockerfile.prod
     ports:
       - "8080:8080"
   nginx:
-    container_name: dev_ayohf_nginx
+    container_name: prod_ayohf_nginx
     image: nginx:latest
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.prod.conf:/etc/nginx/nginx.conf
     depends_on:
-      - backend
+      - rustapp
   db:
-    container_name: dev_ayohf_db
+    container_name: prod_ayohf_db
     image: postgres:latest
     environment:
       POSTGRES_USER: user
