--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -1,14 +1,41 @@
-events { }
+# events { }
+
+# http {
+#     server {
+#         listen 80;
+#         location / {
+#             proxy_pass http://rustapp:8080;
+#             proxy_set_header Host $host;
+#             proxy_set_header X-Real-IP $remote_addr;
+#             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#             proxy_set_header X-Forwarded-Proto $scheme;
+#         }
+#     }
+# }
+
+events {
+    worker_connections  1024;
+}
 
 http {
-    server {
-        listen 80;
-        location / {
-            proxy_pass http://backend:8080;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+  server_tokens off;
+  charset utf-8;
+
+  server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name localhost www.localhost;
+
+    location / {
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      
+      proxy_set_header Host $http_host;
+      proxy_set_header X-NginX-Proxy true;
+      proxy_pass http://rustapp:8080;
+      proxy_redirect off;
     }
+  }
 }
+
+
