add post one cat

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,51 @@
-Dockerfile
-.dockerignore
-.git
-.gitignore
-docker-compose*
-target/
-**/*.rs.bk
+/target/
+/**/*.rs.bk
+
+/target/debug/
+/target/release/
+
+/vendor/
+/.cargo/
+/*.rs.bk
+
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.dSYM
+
+*.log
+*.tmp
+*.swp
+*.swo
+
+node_modules/
+dist/
+pkg/
+*.js
+*.js.map
+
+.yarn/cache/
+.yarn/unplugged/
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+.vscode/
+*.code-workspace
+
+.idea/
+*.iml
+
+*.DS_Store
+*.classpath
+*.project
+*.settings/
+*.factorypath
+
+.DS_Store
+
+*~
+
+Thumbs.db
