--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,3 @@
-DATABASE_NAME=ayohf_db_rs
-DATABASE_URL=postgresql://postgres:postgres@localhost
+DATABASE_NAME=tasktracker_db
+DATABASE_URL=postgresql://tasktracker_user:tasktracker_password@postgres
 CATS_SOURCE=http://0.0.0.0:3333
