--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,16 +23,20 @@ failure = "0.1"
 serde = "1.0"
 serde_json = "1.0"
 async-trait = "0.1"
-diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
+# diesel = { version = "2.2", features = ["postgres", "r2d2"] }
 diesel_migrations = "2.2"
 dotenv = "0.15"
 r2d2 = "0.8"
 tokio = { version = "1.38", features = ["full"] }
 thiserror = "1.0"
 derive_more = "0.99"
-reqwest={version="0.12", features = ["json"]}
+reqwest={ version="0.12", features = ["json"] }
+
+diesel = { version = "2.2", features = ["postgres"] }
+uuid = { version = "1", features = ["v4"] }
+chrono = "0.4"
 
 [dev-dependencies]
 cargo-tarpaulin = "0.30"
-uuid = { version = "1.10", features = ["serde", "v4"] }
+# uuid = { version = "1.10", features = ["serde", "v4"] }
 mockall = "0.12"
