--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,9 @@ derive_more = "0.99"
 reqwest={ version="0.12", features = ["json"] }
 # uuid = { version = "1", features = ["v4"] }
 chrono = "0.4"
+jsonwebtoken = "9.3"
+bcrypt = "0.15"
+uuid = "1.10"
 
 [dev-dependencies]
 cargo-tarpaulin = "0.30"
