--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,19 +23,18 @@ failure = "0.1"
 serde = "1.0"
 serde_json = "1.0"
 async-trait = "0.1"
-diesel = { version = "2.2", features = ["postgres", "r2d2"] }
-diesel_migrations = "2.2"
 dotenv = "0.15"
 r2d2 = "0.8"
 tokio = { version = "1.38", features = ["full"] }
 thiserror = "1.0"
 derive_more = "0.99"
 reqwest={ version="0.12", features = ["json"] }
-# uuid = { version = "1", features = ["v4"] }
-chrono = "0.4"
+uuid = { version = "1", features = ["v4", "serde"] }
+diesel = { version = "2.2", features = ["postgres", "uuid", "r2d2", "chrono"] }
+diesel_migrations = "2.2"
+chrono = { version = "0.4", features = ["serde"] }
 jsonwebtoken = "9.3"
 bcrypt = "0.15"
-uuid = "1.10"
 
 [dev-dependencies]
 cargo-tarpaulin = "0.30"
