--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,11 +32,12 @@ reqwest={ version="0.12", features = ["json"] }
 uuid = { version = "1", features = ["v4", "serde"] }
 diesel = { version = "2.2", features = ["postgres", "uuid", "r2d2", "chrono"] }
 diesel_migrations = "2.2"
+actix-web-httpauth = "0.8.2"
 chrono = { version = "0.4", features = ["serde"] }
 jsonwebtoken = "9.3"
+regex = "1.10.0"
 bcrypt = "0.15"
 
 [dev-dependencies]
 cargo-tarpaulin = "0.30"
-# uuid = { version = "1.10", features = ["serde", "v4"] }
 mockall = "0.12"
