--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ name = "tasktracker_backend"
 path = "src/lib.rs"
 
 [dependencies]
+actix-cors = "^0.7.0"
 actix-web = { version = "4", features = ["openssl"] }
 actix-rt = "2.10"
 actix-http = "3.8"
@@ -33,6 +34,10 @@ uuid = { version = "1", features = ["v4", "serde"] }
 diesel = { version = "2.2", features = ["postgres", "uuid", "r2d2", "chrono"] }
 diesel_migrations = "2.2"
 actix-web-httpauth = "0.8.2"
+# argonautica = "0.2.0"
+hmac = "0.12.1"
+jwt = "0.16.0"
+sha2 = "0.10.8"
 chrono = { version = "0.4", features = ["serde"] }
 jsonwebtoken = "9.3"
 regex = "1.10.0"
