fix Permission user to customer, and add readme.md

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-DATABASE_NAME=db_name
-DATABASE_URL=postgres://user:password@localhost:port
-CATS_SOURCE=http://0.0.0.0:3333
-ENV=dev cargo run
+DATABASE_NAME=
+DATABASE_URL=
+
+JWT_SECRET==
+
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_PORT=
