--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,6 +1,5 @@
 # Development environment
 FROM rust:slim-bookworm
-# FROM rust:latest
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
@@ -9,23 +8,44 @@ RUN apt-get update && apt-get install -y \
     pkg-config \
     && rm -rf /var/lib/apt/lists/*
 
-# Install cargo-watch
-RUN cargo install cargo-watch
+# Install cargo-watch and diesel_cli separately
+# RUN cargo install cargo-watch --version 8.5.3
+
+# RUN cargo install cargo-watch
+RUN if ! command -v cargo-watch > /dev/null; then \
+      cargo install cargo-watch; \
+    else \
+      echo "cargo-watch already installed"; \
+    fi
+
+# RUN cargo install diesel_cli --no-default-features --features postgres
+RUN if ! command -v diesel > /dev/null; then \
+      cargo install diesel_cli --no-default-features --features postgres; \
+    else \
+      echo "diesel_cli is already installed"; \
+    fi
+
+# Ensure Cargo's bin directory is in the PATH
+ENV PATH="/usr/local/cargo/bin:${PATH}"
 
 WORKDIR /usr/src/backend
 
 # Cache dependencies
 COPY Cargo.toml Cargo.lock ./
-RUN cargo fetch
+# RUN cargo fetch
+RUN if [ -z "$(ls -A /usr/local/cargo/registry 2>/dev/null)" ]; then \
+      cargo fetch; \
+    else \
+      echo "Dependencies already cached"; \
+    fi
 
 # Copy source code
 COPY . .
 
 # Set environment variables
-ENV PORT 8080
+ENV PORT=8080
 
 # Expose the application's port
 EXPOSE $PORT
 
-# Command to run the application with cargo watch
-CMD ["cargo", "watch", "-x", "run"]
+ENTRYPOINT ["sh", "-c", "cargo watch -i target -x run"]
